# universe

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
docs/: architecture.md  balance-playtesting.md  campaign-progression.md  campaign-scenes.md  discovery-loop.md  entity-backgrounds.md  game-design.md  godot-frontend.md  imaging-system.md  import-planning.md  instrument-model.md  manual-playtest.md  milestones.md  observatory-time.md  research-entity.md  roadmap.md  scene-001-lyman-alpha-furnace.md  schema.md  science-model.md  survey-programs.md  telescope-progression.md  telescope-ui.md  transient-events.md  tutorial-objectives.md  unreal-frontend.md  visual-language.md
examples/: README.md  generate_example.py  scene_001_config.json
examples/scene_001_example/: scene.json
frontends/godot/: README.md  icon.svg.import  project.godot
frontends/unreal/: README.md  Universe.uproject
tests/: test_balance_tuning.py  test_campaign.py  test_campaign_balance.py  test_campaign_scenes.py  test_cli_surveys_milestones.py  test_demo.py  test_discovery.py  test_entity.py  test_entity_modifiers.py  test_followup_research.py  test_godot_export.py  test_godot_gdscript_typing.py  test_godot_project_integrity.py  test_guidance.py  test_imaging.py  test_milestones.py  test_models.py  test_next_actions.py  test_objectives.py  test_observation_rewards.py  test_observatory_time.py  test_playtest.py  test_region_generation.py  test_scene_export.py  test_solar_system.py  test_surveys.py  test_tech_tree.py  test_telescope_ui.py  test_transients.py  test_unreal_export.py
(+138 files in other folders)
