[project]
name = "universe"
version = "0.1.0"
description = "Engine-agnostic cosmic visualization sandbox — deterministic procedural universe generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.scripts]
universe = "universe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/universe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
